:sparkles: feat: Search Controller
